# Xonix_remake

./: .directory  .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  INSTALACION_LEER.txt  INSTALACION_LEER.txt~  Makefile  README.md  Xonix  cmake_install.cmake  install_manifest.txt  kdevelop_prueba.kdev4  main.cpp  main.cpp~  xonix.kdev4
.kdev4/: Xonix.kdev4  _custom.kdev4  kdevelop_prueba.kdev4  xonix.kdev4
include/: Makefile  cmake_install.cmake  enemigo.hpp  enemigo.hpp~  personaje.hpp  personaje.hpp~  poligono.hpp  poligono.hpp~  poligono.h~  timer.hpp  timer.hpp~  xonix.hpp  xonix.hpp~
resources/: Makefile  cmake_install.cmake
src/: Makefile  cmake_install.cmake  enemigo.cpp  enemigo.cpp~  imagen.cpp~  main.cpp~  personaje.cpp  personaje.cpp~  poligono.cpp  poligono.cpp~  timer.cpp  timer.cpp~  xonix.cpp  xonix.cpp~
